added wakatime stats

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,8 @@
 name: WakaTime status update 
 
 on:
+  push:
+    branches: [ master ]
   schedule:
     # Runs at 12.30 am  '35 5 * * *'  IST (default time is utc so coverted it to ist)
     - cron: '35 5 * * *'
